@@ -18,7 +18,6 @@
 
 package io.getlime.security.powerauth.app.webflow.configuration;
 
-import com.google.common.collect.ImmutableList;
 import io.getlime.security.powerauth.lib.webflow.authentication.service.AuthenticationManagementService;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
@@ -51,6 +50,7 @@ import org.springframework.web.util.UriUtils;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -107,21 +107,21 @@ public class SecurityConfiguration {
                 .apply(authorizationServerConfigurer);
         return http
                 // Accept access tokens for user info endpoints in resource server, use token introspection
-                .oauth2ResourceServer((oauth2) -> oauth2
-                        .opaqueToken((opaque) -> opaque
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .opaqueToken(opaque -> opaque
                                 .introspectionUri(this.introspectionUri)
                                 .introspectionClientCredentials(this.clientId, this.clientSecret)
                         )
                 )
                 // Configure securityContextRepository for session management, see: https://docs.spring.io/spring-security/reference/migration/servlet/session-management.html
-                .securityContext((securityContext) -> securityContext
+                .securityContext(securityContext -> securityContext
                         .securityContextRepository(securityContextRepository)
                 )
                 .csrf(csrf -> csrf
                         .ignoringRequestMatchers(createAntPathRequestMatchers("/api/auth/token/app/**", "/api/push/**", "/pa/**", "/oauth2/**"))
                         .ignoringRequestMatchers(authorizationServerConfigurer.getEndpointsMatcher()))
-                .authorizeHttpRequests((requests) -> requests
-                        .requestMatchers(createAntPathRequestMatchers("/", "/authenticate", "/authenticate/**", "/oauth2/error", "/api/**", "/pa/**", "/resources/**", "/ext-resources/**", "/websocket/**", "/v3/api-docs/**", "/swagger-resources/**", "/swagger-ui.html", "/swagger-ui/**", "/webjars/**", "/actuator/**", "/tls/client/**", "/signer/**", "/favicon.ico")).permitAll()
+                .authorizeHttpRequests(requests -> requests
+                        .requestMatchers(createAntPathRequestMatchers("/", "/authenticate", "/authenticate/**", "/oauth2/error", "/api/**", "/pa/**", "/resources/**", "/ext-resources/**", "/websocket/**", "/v3/api-docs/**", "/swagger-resources/**", "/swagger-ui.html", "/swagger-ui/**", "/webjars/**", "/actuator/**", "/tls/client/**", "/signer/**", "/favicon.ico", "/error")).permitAll()
                         // Authenticate OAuth 2.1 endpoints
                         .requestMatchers(authorizationServerConfigurer.getEndpointsMatcher()).fullyAuthenticated()
                         // Resource server endpoints
@@ -129,7 +129,7 @@ public class SecurityConfiguration {
                         .anyRequest().fullyAuthenticated()
                 )
                 // Redirect to the login page when not authenticated from the authorization endpoint
-                .exceptionHandling((exceptions) -> exceptions
+                .exceptionHandling(exceptions -> exceptions
                         .authenticationEntryPoint(
                                 new LoginUrlAuthenticationEntryPoint("/authenticate"))
                 )
@@ -168,9 +168,9 @@ public class SecurityConfiguration {
         // Configuration of CORS for client TLS certificate validation which can be requested from another host/port
         final CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(Collections.singletonList(corsAllowOrigin));
-        configuration.setAllowedMethods(ImmutableList.of("GET", "POST", "OPTIONS"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "OPTIONS"));
         configuration.setAllowCredentials(true);
-        configuration.setAllowedHeaders(ImmutableList.of("Content-Type", "X-CSRF-Token"));
+        configuration.setAllowedHeaders(List.of("Content-Type", "X-CSRF-Token"));
         final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/tls/client/login", configuration);
         source.registerCorsConfiguration("/tls/client/approve", configuration);
